added further edit and delete styling

--- a/app/noteDeck/noteDeck.css
+++ b/app/noteDeck/noteDeck.css
@@ -39,3 +39,15 @@ div.noteDeck textarea[name=title] {
   resize: none;
 
 }
+
+div.noteDeck .choose {
+
+  float: right;
+
+}
+
+div.noteDeck button.choose {
+
+  margin-right: 4px;
+
+}
