--- a/app/noteDeck/noteDeck.css
+++ b/app/noteDeck/noteDeck.css
@@ -2,19 +2,37 @@ div.noteDeck {
 
   display: inline-block;
 
-  padding: 2px 10px 10px 10px;
-
-  border: 1px solid #A5A5A5;
-
   width: 300px;
+
+  height: 175px;
+
+  position: relative;
+
+}
+
+div.noteDeck div.noteDeckInfo, div.noteDeck div.editDeck, div.noteDeck div.deleteDeck {
+
+  box-sizing: border-box;
+
+  height: 100%;
+
+  width: 100%;
 
   border-radius: 2px;
 
-  box-shadow: 0px 1px 2px rgba(48, 48, 48, 0.64);
+  border: 1px solid #A5A5A5; 
 
-  -moz-box-shadow: 0px 1px 2px rgba(48, 48, 48, 0.64);
+ box-shadow: 0px 1px 2px rgba(48, 48, 48, 0.64);
 
-  -webkit-box-shadow: 0px 1px 2px rgba(48, 48, 48, 0.64);
+-moz-box-shadow: 0px 1px 2px rgba(48, 48, 48, 0.64);
+
+-webkit-box-shadow: 0px 1px 2px rgba(48, 48, 48, 0.64); 
+
+  padding: 2px 10px 10px 10px;
+
+  position: absolute;
+
+  background: white;
 
 }
 
@@ -24,30 +42,26 @@ div.noteDeck h3.noteDeckTitle {
 
 }
 
-div.noteDeck div.noteDeckOptions {
+div.noteDeck div.noteDeckDescription {
 
-  display: inline-block;
+  height: 85px;
 
-  margin-top: 3px;
+  overflow: hidden;
 
-  float: right;
+}
+
+div.noteDeck div.noteDeckButtons {
+
+  position: absolute;
+
+  bottom: 8px;
+
+  right: 8px;
 
 }
 
 div.noteDeck textarea[name=title] {
 
   resize: none;
-
-}
-
-div.noteDeck .choose {
-
-  float: right;
-
-}
-
-div.noteDeck button.choose {
-
-  margin-right: 4px;
 
 }
