--- a/app/noteDecks/noteCards/noteCards.css
+++ b/app/noteDecks/noteCards/noteCards.css
@@ -1,3 +1,65 @@
+form.addCardForm {
+
+  position: fixed;
+
+  right: 23%;
+
+  background: #eee;
+
+  height: 215px;
+
+  width: 300px;
+
+}
+
+@media (max-width: 1224px) and (min-width: 768px) {
+
+  form.addCardForm {
+
+    right: 0;
+
+  }
+
+}
+
+@media (max-width: 767px) {
+
+  form.addCardForm {
+
+    left: 0;
+
+    width: 100%;
+
+    bottom: 0;
+
+    z-index: 10;
+
+  }
+
+}
+
+h4.addCardTitle{
+
+  font-family: inherit;
+
+}
+
+.addCardSetting {
+
+  display: block;
+
+  margin: 14px;
+
+}
+
+input.btn.btn-lg.btn-success {
+
+  float: right;
+
+  margin-right: 17px;
+
+}
+
 div.cards {
 
   clear: both;
