working on mass delete functionality

--- a/app/container.css
+++ b/app/container.css
@@ -25,3 +25,12 @@ background-color: rgba(224, 224, 224, 0.19);
 -webkit-box-shadow: 0 0 2px rgba(124, 137, 206, 0.91);
 box-shadow: 0 0 2px rgba(124, 137, 206, 0.91);
 }
+
+div.overlay {
+position: absolute;
+top: 0;
+height: 100%;
+width: 100%;
+z-index: 100;
+background-color: rgba(1,1,1,0.5);
+}
