--- a/app/container.css
+++ b/app/container.css
@@ -29,6 +29,7 @@ box-shadow: 0 0 2px rgba(124, 137, 206, 0.91);
 div.overlay {
 position: absolute;
 top: 0;
+left: 0;
 height: 100%;
 width: 100%;
 z-index: 100;
