moving selectable to notecard using event emission

--- a/app/noteDecks/noteCards/noteCards.css
+++ b/app/noteDecks/noteCards/noteCards.css
@@ -144,7 +144,7 @@ div.cards {
 
 }
 
-input.cardSelection {
+/*input.cardSelection {
 
   position: absolute;
 
@@ -158,7 +158,7 @@ input.cardSelection {
 
   width: 28px;
 
-}
+}*/
 
 note-card.noteCardWrapper {
 
